--- a/index.html
+++ b/index.html
@@ -53,17 +53,17 @@
                 </div>
             </div>
             <div class="column">
-                <div class="panel bar">
+                <div class="panel bar1">
                     <h2>柱形图</h2>
                     <div class="chart">图标</div>
                     <div class="panel-footer"></div>
                 </div>
-                <div class="panel line">
+                <div class="panel line1">
                     <h2>折线图</h2>
                     <div class="chart">图标</div>
                     <div class="panel-footer"></div>
                 </div>
-                <div class="panel pie">
+                <div class="panel pie1">
                     <h2>饼状图</h2>
                     <div class="chart">图标</div>
                     <div class="panel-footer"></div>
@@ -89,6 +89,8 @@
         }
     </script>
     <script src="./js/flexible.js"></script>
+    <script src="./js/echarts.min.js"></script>
+    <script src="./js/index.js"></script>
 </body>
 
 </html>
