--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
         <section class="mainbox">
             <div class="column">
                 <div class="panel bar">
-                    <h2>柱形图</h2>
+                    <h2>柱形图
+                        <a href="javascript:;">2019</a>
+                        <a href="javascript:;">2020</a>
+                    </h2>
                     <div class="chart">图标</div>
                     <div class="panel-footer"></div>
                 </div>
@@ -90,6 +93,7 @@
     </script>
     <script src="./js/flexible.js"></script>
     <script src="./js/echarts.min.js"></script>
+    <script src="./js/jquery.js"></script>
     <script src="./js/index.js"></script>
 </body>
 
